# docker-adc-keyless-gcp

./: .gitignore  Dockerfile  README.md  Saindeirs  pyproject.toml  requirements.txt
diagram/: run_docker_app_locally_gcp.excalidraw  run_docker_app_locally_gcp_author.excalidraw
world_cup_stats/: insert_world_cup_stats.py
