[project]
name = "docker-adc-keyless-gcp"
version = "0.1.0"
description = "Example of a Docker execution from a local machine with ADC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery==3.38.0",
    "dacite==1.9.2",
    "toolz==1.0.0",
    "ndjson==0.3.1"
]

[dependency-groups]
dev = [
    "pytest==8.4.2"
]
